--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.4
+arrow==0.17.0
 atomicwrites==1.4.0
 attrs==20.3.0
 black==20.8b1
@@ -18,6 +19,7 @@ py==1.10.0
 pyparsing==2.4.7
 pyrsistent==0.17.3
 pytest==6.2.2
+python-dateutil==2.8.1
 regex==2020.11.13
 requests==2.25.1
 six==1.15.0
