Fix event input name

--- a/.github/workflows/gist_cron.yml
+++ b/.github/workflows/gist_cron.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Commit log (depending)
       env:
         TRIGGER: ${{ github.event_name }}
-        COMMIT_OPTION: ${{ github.event.inputs.name }}
+        COMMIT_OPTION: ${{ github.event.inputs.do_commit }}
       run: |
         echo TRIGGER is $TRIGGER
         echo COMMIT_OPTION is $COMMIT_OPTION
