--- a/.github/workflows/gist_cron.yml
+++ b/.github/workflows/gist_cron.yml
@@ -54,5 +54,7 @@ jobs:
         TRIGGER: ${{ github.event_name }}
         COMMIT_OPTION: ${{ github.event.inputs.do_commit }}
       run: |
-        echo TRIGGER is $TRIGGER
-        echo COMMIT_OPTION is $COMMIT_OPTION
+        COMMIT_OPTION=$( echo ${COMMIT_OPTION^} | cut -c1-1 )
+        echo TRIGGER is "'"$TRIGGER"'"
+        echo COMMIT_OPTION is "'"$COMMIT_OPTION"'"
+        ./do_commit
