--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.4
 arrow==0.17.0
 atomicwrites==1.4.0
 attrs==20.3.0
+beautifulsoup4==4.9.3
 black==20.8b1
 certifi==2020.12.5
 chardet==4.0.0
@@ -23,6 +24,7 @@ python-dateutil==2.8.1
 regex==2020.11.13
 requests==2.25.1
 six==1.15.0
+soupsieve==2.2
 sphobjinv==2.0.1
 toml==0.10.2
 typed-ast==1.4.2
