--- a/.github/workflows/gist_cron.yml
+++ b/.github/workflows/gist_cron.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - test-*
   schedule:
-    - cron: '14 2 */3 * *'
+    - cron: '15 1-21/4 * * *'
   workflow_dispatch:
     inputs:
       do_commit:
@@ -26,7 +26,7 @@ jobs:
     - name: Install Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: '3.9'
 
     - name: Update pip
       run: python -m pip install -U pip
