--- a/.github/workflows/gist_cron.yml
+++ b/.github/workflows/gist_cron.yml
@@ -27,6 +27,9 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.9'
+        cache: 'pip'
+        cache-dependency-path: |
+          requirements.txt
 
     - name: Update pip
       run: python -m pip install -U pip
